# Ortho

./: .gitignore  ASES_FRD_v1.2.md  AUDIT.md  BENCHMARK_PROOF_OF_EXECUTION.md  BENCHMARK_VERIFICATION.md  BUG-FIXES-COMPLETE.md  BUGS.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE-WALKTHROUGH.md  COMPREHENSIVE_TEST_SUMMARY.md  CONFERENCE_HANDBOOK.md  DOCUMENTATION-INDEX.md  EXECUTIVE_SUMMARY.md  FEATURES.md  FRD_COMPLETION_AUDIT.md  GOAL_COMPLETION_STATUS.txt  INTEGRATION_GUIDE.md  INTELLIGENCE-IMPROVEMENT-REPORT.md  LANDING_PAGE_REDESIGN.md  LICENSE  MCP_SETUP.md  ONBOARD.md  PHASE_4_BUILD_PLAN.md  PHASE_5_FIXES_REPORT.md  PILOT_READINESS.md  PILOT_ROADMAP.md  PRODUCT_POSITIONING.md  QUICK-START-PHASE-2.md  QUICKSTART.md  README.md  TASK-001-COMPLETION.md  TESTING-RESULTS.md  TEST_MCP_SERVER.md  TEST_VERIFICATION_REPORT.md  antigravity.md  conftest.py  final_release_audit.md  install.bat  install.sh  (+9 more)
.ases/: FIXES-APPLIED.md  GATE-5-VERIFICATION-CHECKLIST.md  GATE-CHECKLIST.md  INTEGRATION-TEST.md  QUICK-START.md  READINESS.md  TEST-EXECUTION-POLICY.md  state-machine.md  task-template.md
.ases/agents/: api-contract-gate.md  architect.md  architecture-arbitrator.md  builder.md  planner.md  reviewer.md  test-designer.md  verifier.md
.ases/agents/core/: analyst.md  architect.md  coder.md  debugger.md  documenter.md  orchestrator.md  reviewer.md  tester.md
.ases/architecture/: contracts.md  decisions.md  modules.md  source-of-truth.md
.ases/architecture/adrs/: ADR-001-ases-multi-agent-orchestration.md  ADR-002-bootstrap-protocol.md  ADR-003-evidence-capture-terminal-only.md  ADR-004-storage-strategy-sqlite-local-first.md  ADR-005-language-adapter-plugin-model.md  ADR-009-adr-cross-reference-strategy.md  ADR-010-reuse-similarity-algorithm.md  ADR-011-index-persistence-strategy.md  ADR-012-canonical-artifacts-schema.md  ADR-013-semantic-router-adoption-directory-layout.md  ADR-014-pure-python-selector.md  ADR-015-token-optimizer-budget-architecture.md  INDEX.md  (+1 more)
.ases/commands/: README.md  capture-evidence.sh  verify-android.sh  verify-python.sh  verify-ts.sh
.ases/evidence/: REAL_REPO_VERIFICATION.md
.ases/scripts/: benchmark_analyze.py  benchmark_intent.py  benchmark_sample.py  benchmark_spot_checks.py  benchmark_tokens.py
.ases/strategic-review/: ADR-CUSTOM-REPOSITORY-INTELLIGENCE.md  CUSTOM-REPOSITORY-INTELLIGENCE-ARCHITECTURE.md  CUSTOM-REPOSITORY-INTELLIGENCE-ROADMAP.md  EXECUTIVE-BRIEF.md  GITNEXUS-DECISION-GATE.md  GITNEXUS-LEGAL-EXTRACTION-GUIDE.md  INDEX.md  LEGAL-COMPATIBILITY-REPORT.md  PHASE-1-TECHNICAL-EVALUATION-STRATEGY.md  PHASE-2-SELECTIVE-ADOPTION-STRATEGY.md  PHASE-3-PRODUCTION-INTEGRATION-ARCHITECTURE.md  TECHNICAL-EVALUATION-ROADMAP-INDEX.md  TECHNICAL-EVALUATION-SUMMARY.md  architecture-decision.md  deletion-manifest.md  gitnexus-architecture-summary.md  gitnexus-gap-analysis.md  gitnexus-integration-plan.md  gitnexus-summary.md  review-current-state.md  risks-and-open-questions.md  updated-phase-roadmap.md
.ases/tasks/: PHASE_6_COMPLETE_SUMMARY.md  PHASE_6_MEGA_HARD_TEST_SUITE.md  PHASE_6_RIGOROUS_TESTING_PLAN.md
.ases/templates/: adr.md  architecture-review.md  evidence-package.md  implementation-notes.md  plan.md  review.md  rollback-plan.md  spec.md  test-plan.md  verification-report.md
.ases/workflows/: baseline-audit.md  bootstrap.md  bugfix.md  feature.md
.ortho/: config.toml
Marketing/: Ortho_BLR_Outreach_50.docx  Ortho_DevTo_ASES_TokenOpt.docx  Ortho_LinkedIn_Sequences.docx  Ortho_Pilot_Campaign_Plan.docx  Ortho_Reddit_Posts.docx  Ortho_ShowHN_Post.docx  Ortho_Twitter_ContentPlan.docx  github_repo_settings.md  linkedin_outreach_sequences.md  ortho-mcp-vs-raw-claude-comparison.md  ortho-vs-raw-claude-flask-comparison.md  ortho-vs-raw-claude-large-scale-comparison.md  reddit_posts.md  show_hn_post.md  target_companies_and_communities.md  x_twitter_content_plan.md
apps/api-server/: pyproject.toml  requirements.txt
apps/api-server/src/: main.py
apps/api-server/src/routers/: orchestration.py
apps/api-server/tests/: conftest.py  test_main.py
apps/cli/: package.json
apps/landing/: .eslintrc.json  .gitignore  DEPLOYMENT.md  INDEX.md  PREVIEW.html  QUICKSTART.md  README.md  REDESIGN.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/mcp-server/: ortho_mcp_server.py  pyproject.toml  test_mcp_server.py
benchmarks/: __init__.py  conftest.py  repo_list.json  run_benchmark.py
benchmarks/adapters/: __init__.py  interface.py
benchmarks/core/: __init__.py  config.py  ground_truth.py  reports.py  result_model.py  runner.py
benchmarks/results/: smoke_all_repos.json
benchmarks/suites/: __init__.py
benchmarks/validation/: __init__.py  architecture_metrics.py  test_adapter_contract.py  test_ground_truth.py  test_import_boundary.py  test_metrics.py
docs/: mcp-server-contract.md
docs/adr/: ADR-006-embedding-provider-abstraction.md  ADR-007-fts5-triggers-synchronization.md  ADR-008-artifact-versioning-phase-1.md
docs/architecture/: ORTHO_VNEXT_DELTA_BLUEPRINT.md  adr-015-layer-boundaries.md
docs/archive/: AUDIT.md  BUG-FIXES-COMPLETE.md  CLEANUP_PLAN.md  COMPLETE-WALKTHROUGH.md  DEPENDENCY-ISSUES.md  DEPLOYMENT-SUMMARY.md  DOCUMENTATION-INDEX.md  EXECUTION_REPORT.md  FALSE_POSITIVE_AUDIT_2026-07-16.md  INNOVATION_SUBMISSION.md  LANDING_PAGE_SUMMARY.md  ORTHO_REAL_WORLD_VALUE_ASSESSMENT.md  PHASE-1-FINAL-SUMMARY.md  PHASE-5-2-COMPLETION.md  PHASE-5-2-FINAL-SUMMARY.md  PHASE-5-DELIVERY-SUMMARY.md  PHASE-5-FINAL-ACCEPTANCE.md  PHASE-5-STATUS.md  PHASE_5_6_COMPLETION_STATUS.md  PHASE_6_FINAL_REPORT.md  PHASE_6_RIGOROUS_TEST_RESULTS.md  PRODUCTION-VALIDATION-REPORT.md  PRODUCTION_AUDIT_2026-07-15.md  TASK-002-003-COMPLETION.md  TASK-002-003-TEST-RESULTS.md  TASK_015_ACCEPTANCE_GAP.md  TESTING-IMPROVEMENTS.md  TESTING-RESULTS.md  TESTING.md  task-015-simulated-benchmarks.md
markdown/: FINAL_VERIFICATION_REPORT.md
ortho/: __init__.py
scripts/: test_on_real_repos.py  test_ortho_features.py  test_ortho_sample_output.py
shared/storage/: pyproject.toml
shared/types/: package.json  tsconfig.json
(+452 files in other folders)
