[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ortho"
version = "0.1.0"
description = "Engineering Intelligence Platform — repository understanding before AI execution"
authors = [{name = "Ortho Team", email = "urbrain369@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "engineering", "repository-intelligence", "architecture-analysis"]

[tool.poetry]
name = "ortho"
version = "0.1.0"
description = "Engineering Intelligence Platform"
authors = ["Ortho Team <urbrain369@gmail.com>"]
readme = "README.md"

# Poetry workspaces — all 13 packages installed with one command
packages = [
    { include = "shared/storage", from = "." },
    { include = "packages/repo-intelligence", from = "." },
    { include = "packages/context-hub", from = "." },
    { include = "packages/arch-intelligence", from = "." },
    { include = "packages/impact-analysis", from = "." },
    { include = "packages/change-planner", from = "." },
    { include = "packages/feature-planner", from = "." },
    { include = "packages/refactoring-advisor", from = "." },
    { include = "packages/arch-guardrails", from = "." },
    { include = "packages/decision-engine", from = "." },
    { include = "packages/cli-commands", from = "." },
    { include = "packages/token-optimizer", from = "." },
    { include = "packages/orchestration", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies (from existing packages)
tree-sitter = "^0.21"
semantic-router = "^0.1.8"
pydantic = "^2.0"
numpy = "^1.24"
scipy = "^1.11"
scikit-learn = "^1.3"
sqlalchemy = "^2.0"
sqlite-utils = "^3.35"
typing-extensions = "^4.7"
mcp = "^1.0"  # MCP server (Claude Code integration)

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
mypy = "^1.5"
ruff = "^0.1"
black = "^23.9"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "shared", "apps"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # handled by black
