[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ortho"
version = "0.1.0"
description = "Engineering Intelligence Platform — repository understanding before AI execution"
authors = [{name = "Ortho Team", email = "urbrain369@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "engineering", "repository-intelligence", "architecture-analysis"]

[tool.poetry]
name = "ortho"
version = "0.1.0"
description = "Engineering Intelligence Platform"
authors = ["Ortho Team <urbrain369@gmail.com>"]
readme = "README.md"

# NOTE: this package intentionally does NOT bundle the 13 workspace
# packages' source via `packages = [...]` (removed 2026-07-16). Every real
# install path (install.sh/install.bat/install.ps1) already installs each
# workspace package separately and editable via its own `-e packages/X`
# flag -- that is the actual, working mechanism (see install.sh's own
# comment: "Root `pip install -e .` alone does NOT install the 13
# workspace packages"). Bundling the same source a second time here made
# pip's resolver see two different installs of the same package (e.g.
# context-hub bundled into root AND separately editable-installed) and
# fail with a self-referential ResolutionImpossible on a genuinely clean
# install -- reproduced and root-caused via a real install.ps1 test run
# against an environment with no prior Ortho packages installed.

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies (from existing packages)
# Pinned to match packages/repo-intelligence's exact pin (tree-sitter-languages
# 1.9.1 requires tree-sitter==0.20.4) -- a real, previously-unnoticed
# dependency conflict here made a genuinely clean `pip install -e .` fail
# with ResolutionImpossible; every existing dev environment already had
# 0.20.4 installed from working on repo-intelligence directly, which masked
# it. Root's stated range must match what the workspace packages actually
# require, not an independent guess.
tree-sitter = "==0.20.4"
semantic-router = "^0.1.8"
pydantic = "^2.0"
numpy = "^1.24"
scipy = "^1.11"
scikit-learn = "^1.3"
sqlalchemy = "^2.0"
sqlite-utils = "^3.35"
typing-extensions = "^4.7"
mcp = "^1.0"  # MCP server (Claude Code integration)

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
mypy = "^1.5"
ruff = "^0.1"
black = "^23.9"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "shared", "apps"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # handled by black
