[tool.poetry]
name = "ortho-api-server"
version = "0.1.0"
description = "FastAPI backend server"
authors = ["urbra <urbrain369@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
